--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ">=3.2.4 <4.0.0"
 
 dependencies:
+  bloc_concurrency: ^0.2.5
+  camera: ^0.11.0+1
   equatable: ^2.0.5
   flutter:
     sdk: flutter
@@ -15,6 +17,14 @@ dependencies:
   flutter_map_location_marker: ^8.1.0
   geolocator: ^11.1.0
   latlong2: ^0.9.1
+  location: ^6.0.2
+  path_provider: ^2.1.3
+  permission_handler: ^11.3.1
+  supabase_flutter: ^2.5.10
+  flutter_dotenv: ^5.1.0
+  get_it: ^7.6.7
+  dio: ^5.5.0+1
+  loader_overlay: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -23,3 +33,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - .env
